# chatbot-tlcn_

./: .gitignore  Idea.txt  alembic.ini  app.py  db.py  dir_structure.md  docker-compose.yml  env.py  env_copy.py  eval.ipynb  f087f258-c2d4-432b-9ba2-6d7bd5325919_en.html  faq_evaluation_results.csv  faq_testset.csv  idea.ipynb  messenger.py  phone_evaluation_results.csv  phone_testset.csv  pyproject.toml  test.ipynb  test.py
.chainlit/: config.toml
alembic/: env.py
alembic/versions/: 0113278eac18_modify_name_embedding_column_of_phones_.py  0b47af67e745_edit_phone_table.py  120a604fd902_add_vector_extension.py  45d35c46a219_add_user_memory_table.py  535089ddf724_add_contact_info_columns_into_user_.py  672acb86aec9_create_faqs_table.py  71321ac3cff1_add_embedding_column_for_phone_name_.py  (+5 more)
app/: main.py
chainlit_process/: authentication.py  message.py
models/: base.py  brand.py  faq.py  laptop.py  message.py  phone.py  user.py  user_memory.py
repositories/: brand.py  faq.py  laptop.py  phone.py  redis.py  user.py  user_memory.py
service/: converter.py  email.py  embedding.py  openai.py  openai_copy.py  store_chatbot.py  store_chatbot_copy.py
src/: App.tsx
swark-output/: 2025-01-22__20-10-17__diagram.md  2025-01-22__20-10-17__log.md
tasks/: faqs.csv  import_brand_data.py  import_faq_data.py  import_laptop_data.py  import_phone_data.py  phone_data.jsonl  unique_brand_code.ipynb  unique_brands.json  unique_product_types.json
tools/: collect_requirement.py  collect_user_contact_info.py  faq.py  invoke_tool.py  search_phone_database.py
(+4 files in other folders)
